# engraph

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/: demo-search.tape  demo.tape
docs/specs/: 2026-03-24-engraph-v2.1-design.md  2026-03-24-engraph-v2.1-plan.md  2026-03-24-engraph-v2.2a-design.md  2026-03-24-engraph-v2.2a-plan.md  2026-03-24-engraph-v2.2b-design.md  2026-03-24-engraph-v2.2b-plan.md
examples/: claude-code-setup.md
src/: chunker.rs  config.rs  context.rs  docid.rs  embedder.rs  fts.rs  fusion.rs  graph.rs  health.rs  hnsw.rs  http.rs  indexer.rs  lib.rs  links.rs  llm.rs  main.rs  markdown.rs  migrate.rs  model.rs  obsidian.rs  openapi.rs  placement.rs  profile.rs  search.rs  serve.rs  store.rs  tags.rs  temporal.rs  vecstore.rs  watcher.rs  writer.rs
tests/: integration.rs  write_pipeline.rs
tests/fixtures/: note1.md  note2.md  note3.md
tests/fixtures/.obsidian/: config.md
tests/fixtures/subfolder/: note4.md
