[package]
name = "engraph"
version = "0.7.0"
edition = "2024"
description = "Local semantic search for Obsidian vaults"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
sha2 = "0.10"
ureq = "2.12"
indicatif = "0.17"
ndarray = "0.17"
sqlite-vec = "0.1.8-alpha.1"
zerocopy = { version = "0.7", features = ["derive"] }
rayon = "1"
time = "0.3"
strsim = "0.11"
ignore = "0.4"
rmcp = { version = "1.2", features = ["transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
notify = "7.0"
notify-debouncer-full = "0.4"

[dev-dependencies]
tempfile = "3"
