[package]
name = "engraph"
version = "1.0.2"
edition = "2024"
description = "Local knowledge graph for AI agents. Hybrid search + MCP server for Obsidian vaults."
license = "MIT"
repository = "https://github.com/devwhodevs/engraph"
homepage = "https://github.com/devwhodevs/engraph"
readme = "README.md"
keywords = ["obsidian", "semantic-search", "mcp", "rag", "knowledge-graph"]
categories = ["command-line-utilities", "database", "text-processing"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
sha2 = "0.10"
ureq = "2.12"
indicatif = "0.17"
sqlite-vec = "0.1.8-alpha.1"
zerocopy = { version = "0.7", features = ["derive"] }
rayon = "1"
time = "0.3"
strsim = "0.11"
ignore = "0.4"
rmcp = { version = "1.2", features = ["transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time"] }
notify = "7.0"
notify-debouncer-full = "0.4"
llama-cpp-2 = "0.1"
encoding_rs = "0.8"
shimmytok = "0.7"

[features]
default = []

[dev-dependencies]
tempfile = "3"
